--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "firebase": "^9.10.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -15,6 +16,9 @@
     "@types/node": "^12.20.55",
     "@types/react": "^17.0.50",
     "@types/react-dom": "^17.0.17",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "typescript": "4.0"
   }
 }
