--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "firebase": "^9.10.0",
     "next": "latest",
     "react": "^17.0.2",
