--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@netlify/plugin-nextjs": "^4.30.0",
+    "axios": "^1.2.5",
     "firebase": "^9.10.0",
     "next": "latest",
     "react": "^17.0.2",
