--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.9",
     "@netlify/plugin-nextjs": "^4.30.0",
-    "axios": "^1.2.5",
     "firebase": "^9.10.0",
     "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^12.20.55",
@@ -25,6 +25,6 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.0"
+    "typescript": "^4.9.5"
   }
 }
